miniReptile/parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls fdecl
   4        | decls vdecl

   5  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE

   6  formals_opt :
   7              | formal_list

   8  formal_list : typ ID
   9              | formal_list COMMA typ ID

  10  vdecl : typ ID SEMI

  11  vdecl_stmt : typ ID SEMI
  12             | typ ID ASSIGN expr SEMI

  13  typ : STRING
  14      | INT
  15      | VOID
  16      | BOOL
  17      | FLOAT
  18      | RGB
  19      | CANVAS
  20      | POINTER
  21      | FILE

  22  stmt_list :
  23            | stmt_list stmt

  24  stmt : expr SEMI
  25       | RETURN expr_opt SEMI
  26       | LBRACE stmt_list RBRACE
  27       | IF LPAREN expr RPAREN stmt
  28       | IF LPAREN expr RPAREN stmt ELSE stmt
  29       | vdecl_stmt
  30       | WHILE LPAREN expr RPAREN stmt

  31  expr_opt :
  32           | expr

  33  expr : LITERAL
  34       | BLIT
  35       | FLIT
  36       | ID
  37       | expr PLUS expr
  38       | expr MINUS expr
  39       | expr TIMES expr
  40       | expr DIVIDE expr
  41       | expr EQ expr
  42       | expr NEQ expr
  43       | expr LT expr
  44       | expr LEQ expr
  45       | expr GT expr
  46       | expr GEQ expr
  47       | expr AND expr
  48       | expr OR expr
  49       | expr MOD expr
  50       | MINUS expr
  51       | NOT expr
  52       | ID ASSIGN expr
  53       | ID LPAREN args_opt RPAREN
  54       | typ LPAREN args_opt RPAREN
  55       | LPAREN expr RPAREN

  56  args_opt :
  57           | args_list

  58  args_list : expr
  59            | args_list COMMA expr

  60  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (60)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (60)

	.  reduce 60


state 4
	program : decls . EOF  (1)
	decls : decls . fdecl  (3)
	decls : decls . vdecl  (4)

	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	EOF  shift 14
	.  error

	fdecl  goto 15
	vdecl  goto 16
	typ  goto 17


state 5
	typ : INT .  (14)

	.  reduce 14


state 6
	typ : STRING .  (13)

	.  reduce 13


state 7
	typ : VOID .  (15)

	.  reduce 15


state 8
	typ : BOOL .  (16)

	.  reduce 16


state 9
	typ : FLOAT .  (17)

	.  reduce 17


state 10
	typ : RGB .  (18)

	.  reduce 18


state 11
	typ : CANVAS .  (19)

	.  reduce 19


state 12
	typ : POINTER .  (20)

	.  reduce 20


state 13
	typ : FILE .  (21)

	.  reduce 21


state 14
	program : decls EOF .  (1)

	.  reduce 1


state 15
	decls : decls fdecl .  (3)

	.  reduce 3


state 16
	decls : decls vdecl .  (4)

	.  reduce 4


state 17
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (5)
	vdecl : typ . ID SEMI  (10)

	ID  shift 18
	.  error


state 18
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (5)
	vdecl : typ ID . SEMI  (10)

	SEMI  shift 19
	LPAREN  shift 20
	.  error


state 19
	vdecl : typ ID SEMI .  (10)

	.  reduce 10


state 20
	fdecl : typ ID LPAREN . formals_opt RPAREN LBRACE stmt_list RBRACE  (5)
	formals_opt : .  (6)

	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	RPAREN  reduce 6

	typ  goto 21
	formals_opt  goto 22
	formal_list  goto 23


state 21
	formal_list : typ . ID  (8)

	ID  shift 24
	.  error


state 22
	fdecl : typ ID LPAREN formals_opt . RPAREN LBRACE stmt_list RBRACE  (5)

	RPAREN  shift 25
	.  error


state 23
	formals_opt : formal_list .  (7)
	formal_list : formal_list . COMMA typ ID  (9)

	COMMA  shift 26
	RPAREN  reduce 7


state 24
	formal_list : typ ID .  (8)

	.  reduce 8


state 25
	fdecl : typ ID LPAREN formals_opt RPAREN . LBRACE stmt_list RBRACE  (5)

	LBRACE  shift 27
	.  error


state 26
	formal_list : formal_list COMMA . typ ID  (9)

	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	.  error

	typ  goto 28


state 27
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE . stmt_list RBRACE  (5)
	stmt_list : .  (22)

	.  reduce 22

	stmt_list  goto 29


state 28
	formal_list : formal_list COMMA typ . ID  (9)

	ID  shift 30
	.  error


state 29
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE stmt_list . RBRACE  (5)
	stmt_list : stmt_list . stmt  (23)

	LPAREN  shift 31
	LBRACE  shift 32
	RBRACE  shift 33
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	RETURN  shift 36
	WHILE  shift 37
	IF  shift 38
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 43
	vdecl_stmt  goto 44
	expr  goto 45
	stmt  goto 46


state 30
	formal_list : formal_list COMMA typ ID .  (9)

	.  reduce 9


state 31
	expr : LPAREN . expr RPAREN  (55)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 48


state 32
	stmt : LBRACE . stmt_list RBRACE  (26)
	stmt_list : .  (22)

	.  reduce 22

	stmt_list  goto 49


state 33
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE .  (5)

	.  reduce 5


state 34
	expr : MINUS . expr  (50)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 50


state 35
	expr : NOT . expr  (51)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 51


state 36
	stmt : RETURN . expr_opt SEMI  (25)
	expr_opt : .  (31)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SEMI  reduce 31

	typ  goto 47
	expr  goto 52
	expr_opt  goto 53


state 37
	stmt : WHILE . LPAREN expr RPAREN stmt  (30)

	LPAREN  shift 54
	.  error


state 38
	stmt : IF . LPAREN expr RPAREN stmt  (27)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (28)

	LPAREN  shift 55
	.  error


state 39
	expr : LITERAL .  (33)

	.  reduce 33


state 40
	expr : BLIT .  (34)

	.  reduce 34


state 41
	expr : ID .  (36)
	expr : ID . ASSIGN expr  (52)
	expr : ID . LPAREN args_opt RPAREN  (53)

	LPAREN  shift 56
	ASSIGN  shift 57
	SEMI  reduce 36
	RPAREN  reduce 36
	COMMA  reduce 36
	PLUS  reduce 36
	MINUS  reduce 36
	TIMES  reduce 36
	DIVIDE  reduce 36
	MOD  reduce 36
	EQ  reduce 36
	NEQ  reduce 36
	LT  reduce 36
	LEQ  reduce 36
	GT  reduce 36
	GEQ  reduce 36
	AND  reduce 36
	OR  reduce 36


state 42
	expr : FLIT .  (35)

	.  reduce 35


state 43
	vdecl_stmt : typ . ID SEMI  (11)
	vdecl_stmt : typ . ID ASSIGN expr SEMI  (12)
	expr : typ . LPAREN args_opt RPAREN  (54)

	LPAREN  shift 58
	ID  shift 59
	.  error


state 44
	stmt : vdecl_stmt .  (29)

	.  reduce 29


state 45
	stmt : expr . SEMI  (24)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . MOD expr  (49)

	SEMI  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	MOD  shift 65
	EQ  shift 66
	NEQ  shift 67
	LT  shift 68
	LEQ  shift 69
	GT  shift 70
	GEQ  shift 71
	AND  shift 72
	OR  shift 73
	.  error


state 46
	stmt_list : stmt_list stmt .  (23)

	.  reduce 23


state 47
	expr : typ . LPAREN args_opt RPAREN  (54)

	LPAREN  shift 58
	.  error


state 48
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . MOD expr  (49)
	expr : LPAREN expr . RPAREN  (55)

	RPAREN  shift 74
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	MOD  shift 65
	EQ  shift 66
	NEQ  shift 67
	LT  shift 68
	LEQ  shift 69
	GT  shift 70
	GEQ  shift 71
	AND  shift 72
	OR  shift 73
	.  error


state 49
	stmt_list : stmt_list . stmt  (23)
	stmt : LBRACE stmt_list . RBRACE  (26)

	LPAREN  shift 31
	LBRACE  shift 32
	RBRACE  shift 75
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	RETURN  shift 36
	WHILE  shift 37
	IF  shift 38
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 43
	vdecl_stmt  goto 44
	expr  goto 45
	stmt  goto 46


state 50
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . MOD expr  (49)
	expr : MINUS expr .  (50)

	.  reduce 50


state 51
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . MOD expr  (49)
	expr : NOT expr .  (51)

	.  reduce 51


state 52
	expr_opt : expr .  (32)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . MOD expr  (49)

	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	MOD  shift 65
	EQ  shift 66
	NEQ  shift 67
	LT  shift 68
	LEQ  shift 69
	GT  shift 70
	GEQ  shift 71
	AND  shift 72
	OR  shift 73
	SEMI  reduce 32


state 53
	stmt : RETURN expr_opt . SEMI  (25)

	SEMI  shift 76
	.  error


state 54
	stmt : WHILE LPAREN . expr RPAREN stmt  (30)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 77


state 55
	stmt : IF LPAREN . expr RPAREN stmt  (27)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (28)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 78


state 56
	expr : ID LPAREN . args_opt RPAREN  (53)
	args_opt : .  (56)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	RPAREN  reduce 56

	typ  goto 47
	expr  goto 79
	args_opt  goto 80
	args_list  goto 81


state 57
	expr : ID ASSIGN . expr  (52)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 82


state 58
	expr : typ LPAREN . args_opt RPAREN  (54)
	args_opt : .  (56)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	RPAREN  reduce 56

	typ  goto 47
	expr  goto 79
	args_opt  goto 83
	args_list  goto 81


state 59
	vdecl_stmt : typ ID . SEMI  (11)
	vdecl_stmt : typ ID . ASSIGN expr SEMI  (12)

	SEMI  shift 84
	ASSIGN  shift 85
	.  error


state 60
	stmt : expr SEMI .  (24)

	.  reduce 24


state 61
	expr : expr PLUS . expr  (37)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 86


state 62
	expr : expr MINUS . expr  (38)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 87


state 63
	expr : expr TIMES . expr  (39)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 88


state 64
	expr : expr DIVIDE . expr  (40)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 89


state 65
	expr : expr MOD . expr  (49)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 90


state 66
	expr : expr EQ . expr  (41)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 91


state 67
	expr : expr NEQ . expr  (42)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 92


state 68
	expr : expr LT . expr  (43)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 93


state 69
	expr : expr LEQ . expr  (44)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 94


state 70
	expr : expr GT . expr  (45)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 95


state 71
	expr : expr GEQ . expr  (46)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 96


state 72
	expr : expr AND . expr  (47)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 97


state 73
	expr : expr OR . expr  (48)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	INT  shift 5
	STRING  shift 6
	VOID  shift 7
	BOOL  shift 8
	FLOAT  shift 9
	RGB  shift 10
	CANVAS  shift 11
	POINTER  shift 12
	FILE  shift 13
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	.  error

	typ  goto 47
	expr  goto 98


state 74
	expr : LPAREN expr RPAREN .  (55)

	.  reduce 55


state 75
	stmt : LBRACE stmt_list RBRACE .  (26)

	.  reduce 26


state 76
	stmt : RETURN expr_opt SEMI .  (25)

	.  reduce 25


state 77
	stmt : WHILE LPAREN expr . RPAREN stmt  (30)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . MOD expr  (49)

	RPAREN  shift 99
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	MOD  shift 65
	EQ  shift 66
	NEQ  shift 67
	LT  shift 68
	LEQ  shift 69
	GT  shift 70
	GEQ  shift 71
	AND  shift 72
	OR  shift 73
	.  error


state 78
	stmt : IF LPAREN expr . RPAREN stmt  (27)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (28)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . MOD expr  (49)

	RPAREN  shift 100
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	MOD  shift 65
	EQ  shift 66
	NEQ  shift 67
	LT  shift 68
	LEQ  shift 69
	GT  shift 70
	GEQ  shift 71
	AND  shift 72
	OR  shift 73
	.  error


state 79
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . MOD expr  (49)
	args_list : expr .  (58)

	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	MOD  shift 65
	EQ  shift 66
	NEQ  shift 67
	LT  shift 68
	LEQ  shift 69
	GT  shift 70
	GEQ  shift 71
	AND  shift 72
	OR  shift 73
	RPAREN  reduce 58
	COMMA  reduce 58


state 80
	expr : ID LPAREN args_opt . RPAREN  (53)

	RPAREN  shift 101
	.  error


state 81
	args_opt : args_list .  (57)
	args_list : args_list . COMMA expr  (59)

	COMMA  shift 102
	RPAREN  reduce 57


state 82
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . MOD expr  (49)
	expr : ID ASSIGN expr .  (52)
